// Vitest Snapshot v1

exports[`advanced nesting 333 1`] = `
"tag App
	<self>
		<div>
			<span>
				\\"Test\\"
			<div>
				<h2>
					\\"Title\\"
				<div>
					<span>
						<a href=\\"\\">
						<span>
							\\"Test 2\\"
						\\"Text\\"
			<footer>
				\\"F\\"
"
`;

exports[`multiple levels closed at once 31 1`] = `
"tag App
	<self>
		<div>
			<section>
				<div>
					<div>
						<h2>
							\\"Title\\"
			<footer>
				\\"F\\"
"
`;

exports[`self closing nesting 1`] = `
"tag App
	<self>
		<div>
			<a href=\\"\\">
			<span>
				\\"Test 2\\"
"
`;

exports[`self closing nesting 12 1`] = `
"tag App
	<self>
		<div>
			<div>
				<h3>
					\\"Title\\"
			<footer>
				\\"F\\"
"
`;
